--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "babel-polyfill": "^6.23.0",
     "graphql-tag": "^2.0.0",
     "node-fetch": "^1.6.3",
-    "nuxt": "tillkolter/nuxt.js",
+//    "nuxt": "tillkolter/nuxt.js",
+    "nuxt": "nuxt",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
     "vue": "~2.2.6",
