--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "babel-polyfill": "^6.23.0",
     "graphql-tag": "^2.0.0",
     "node-fetch": "^1.6.3",
-    "nuxt": "latest",
+    "nuxt": "file:../nuxt.js",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
     "vue": "~2.2.6",
@@ -27,7 +27,7 @@
     "vuex": "^2.2.1"
   },
   "scripts": {
-    "dev": "nuxt $NODE_DEBUG_OPTION ",
+    "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
