--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "node-fetch": "^1.6.3",
-    "nuxt": "file:../nuxt.js",
+    "nuxt": "latest",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
     "vue": "~2.2.6",
