--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-polyfill": "^6.23.0",
     "graphql-tag": "^2.0.0",
     "isomorphic-fetch": "^2.2.1",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
     "node-fetch": "^1.6.3",
     "nuxt": "latest",
