--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-router": "^2.4.0",
     "vue-social-sharing": "^2.2.0",
     "vue-supply": "^0.1.1",
+    "vue2-dropzone": "^2.2.7",
     "vuex": "^2.2.1"
   },
   "scripts": {
