--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
     "vue": "~2.2.6",
+    "vue-analytics": "^4.1.2",
     "vue-apollo": "^v2.1.0-beta.2",
     "vue-clickaway": "^2.1.0",
     "vue-cookie": "^1.1.4",
