--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-apollo": "^v2.1.0-beta.2",
     "vue-clickaway": "^2.1.0",
     "vue-cookie": "^1.1.4",
+    "vue-ga": "^1.0.0",
     "vue-inline": "^1.0.1",
     "vue-markdown": "^2.1.3",
     "vue-meta": "^0.5.6",
