--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-router": "^2.4.0",
     "vue-social-sharing": "^2.2.0",
     "vue-supply": "^0.1.1",
+    "vue-ua": "^1.3.0",
     "vue2-dropzone": "^2.2.7",
     "vuex": "^2.2.1"
   },
