--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "Till Kolter <till.kolter@gmail.com>",
   "private": true,
   "dependencies": {
-    "@nuxtjs/google-analytics": "^0.2.0",
     "apollo-client": "^1.0.1",
     "babel-polyfill": "^6.23.0",
     "graphql-tag": "^2.0.0",
@@ -16,8 +15,8 @@
     "nuxt": "latest",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
-    "vue": "~2.3.4",
-    "vue-analytics": "tillkolter/vue-analytics",
+    "vue": "~2.2.6",
+    "vue-analytics": "^4.1.2",
     "vue-apollo": "^v2.1.0-beta.2",
     "vue-clickaway": "^2.1.0",
     "vue-cookie": "^1.1.4",
@@ -103,7 +102,7 @@
     "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.0",
     "vue-svg-loader": "^0.1.2",
-    "vue-template-compiler": "^2.3.4",
+    "vue-template-compiler": "^2.2.1",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
