--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
     "node-fetch": "^1.6.3",
-    "nuxt": "latest",
+    "nuxt": "file:../nuxt.js",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
     "vue": "~2.2.6",
-    "vue-analytics": "^4.1.2",
+    "vue-analytics": "tillkolter/vue-analytics",
     "vue-apollo": "^v2.1.0-beta.2",
     "vue-clickaway": "^2.1.0",
     "vue-cookie": "^1.1.4",
@@ -102,7 +102,7 @@
     "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.0",
     "vue-svg-loader": "^0.1.2",
-    "vue-template-compiler": "^2.2.1",
+    "vue-template-compiler": "2.2.6",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
