--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Till Kolter <till.kolter@gmail.com>",
   "private": true,
   "dependencies": {
-    "apollo-client": "^1.0.1",
+    "apollo-client": "^1.9.0-1",
     "babel-polyfill": "^6.23.0",
     "graphql-tag": "^2.0.0",
     "isomorphic-fetch": "^2.2.1",
