--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
+    "axios": "^0.16.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
@@ -85,7 +86,9 @@
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^2.0.2",
     "lolex": "^1.5.2",
+    "longjohn": "^0.2.12",
     "mocha": "^3.2.0",
+    "module": "^1.2.5",
     "nightwatch": "^0.9.12",
     "node-sass": "^4.5.0",
     "opn": "^4.0.2",
