--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "node-fetch": "^1.6.3",
     "nuxt": "v0.10.7",
     "style-loader": "^0.16.1",
-    "url-loader": "^0.5.8",
+    "tiny-cookie": "^2.0.2",
     "vue": "~2.2.6",
     "vue-analytics": "tillkolter/vue-analytics",
     "vue-apollo": "^v2.1.0-beta.2",
@@ -52,7 +52,7 @@
     "babel-preset-env": "^1.2.1",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "4.0.0-beta",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "chromedriver": "^2.27.2",
