--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "apollo-client": "^1.9.0-1",
     "babel-polyfill": "^6.23.0",
     "graphql-tag": "^2.0.0",
+    "heapdump": "^0.3.9",
     "isomorphic-fetch": "^2.2.1",
     "js-beautify": "1.6.14",
     "jwt-decode": "^2.2.0",
