--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "vue-supply": "^0.1.1",
     "vue-ua": "^1.3.0",
     "vue2-dropzone": "^2.2.7",
-    "vuex": "^2.2.1"
+    "vuex": "2.3.0"
   },
   "scripts": {
     "dev": "nuxt",
