--- a/package.json
+++ b/package.json
@@ -5,33 +5,33 @@
   "author": "Till Kolter <till.kolter@gmail.com>",
   "private": true,
   "dependencies": {
-    "apollo-client": "^1.9.0-1",
-    "babel-polyfill": "^6.23.0",
-    "graphql-tag": "^2.0.0",
-    "heapdump": "^0.3.9",
-    "isomorphic-fetch": "^2.2.1",
+    "apollo-client": "1.9.0-1",
+    "babel-polyfill": "6.23.0",
+    "graphql-tag": "2.0.0",
+    "heapdump": "0.3.9",
+    "isomorphic-fetch": "2.2.1",
     "js-beautify": "1.6.14",
-    "jwt-decode": "^2.2.0",
-    "lodash": "^4.17.4",
-    "node-fetch": "^1.6.3",
+    "jwt-decode": "2.2.0",
+    "lodash": "4.17.4",
+    "node-fetch": "1.7.1",
     "nuxt": "v0.10.7",
-    "style-loader": "^0.16.1",
-    "tiny-cookie": "^2.0.2",
+    "style-loader": "0.16.1",
+    "tiny-cookie": "2.0.2",
     "vue": "~2.2.6",
     "vue-analytics": "tillkolter/vue-analytics",
-    "vue-apollo": "^v2.1.0-beta.2",
-    "vue-clickaway": "^2.1.0",
-    "vue-cookie": "^1.1.4",
-    "vue-ga": "^1.0.0",
-    "vue-inline": "^1.0.1",
-    "vue-markdown": "^2.1.3",
-    "vue-meta": "^0.5.6",
-    "vue-resource": "^1.2.1",
-    "vue-router": "^2.4.0",
-    "vue-social-sharing": "^2.2.0",
-    "vue-supply": "^0.1.1",
-    "vue-ua": "^1.3.0",
-    "vue2-dropzone": "^2.2.7",
+    "vue-apollo": "v2.1.0-beta.2",
+    "vue-clickaway": "2.1.0",
+    "vue-cookie": "1.1.4",
+    "vue-ga": "1.0.0",
+    "vue-inline": "1.0.1",
+    "vue-markdown": "2.1.3",
+    "vue-meta": "0.5.6",
+    "vue-resource": "1.2.1",
+    "vue-router": "2.4.0",
+    "vue-social-sharing": "2.2.0",
+    "vue-supply": "0.1.1",
+    "vue-ua": "1.3.0",
+    "vue2-dropzone": "2.2.7",
     "vuex": "2.3.0"
   },
   "scripts": {
@@ -43,75 +43,75 @@
     "precommit": "npm run lint"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
-    "axios": "^0.16.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-istanbul": "^3.1.2",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.2.1",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
+    "autoprefixer": "6.7.2",
+    "axios": "0.16.2",
+    "babel-core": "6.22.1",
+    "babel-eslint": "7.1.1",
+    "babel-loader": "6.2.10",
+    "babel-plugin-istanbul": "3.1.2",
+    "babel-plugin-transform-runtime": "6.22.0",
+    "babel-preset-env": "1.2.1",
+    "babel-preset-stage-2": "6.22.0",
+    "babel-register": "6.22.0",
     "bootstrap": "4.0.0-beta",
-    "chai": "^3.5.0",
-    "chalk": "^1.1.3",
-    "chromedriver": "^2.27.2",
-    "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^3.1.4",
-    "cross-spawn": "^5.0.1",
-    "css-loader": "^0.26.1",
-    "eslint": "^3.15.0",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-friendly-formatter": "^2.0.7",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-html": "^2.0.0",
-    "eslint-plugin-promise": "^3.4.1",
-    "eslint-plugin-standard": "^2.0.1",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.10.1",
-    "fontgen-loader": "^0.2.1",
-    "friendly-errors-webpack-plugin": "^1.1.3",
-    "function-bind": "^1.1.0",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.4",
-    "inject-loader": "^2.0.1",
-    "karma": "^1.4.1",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-sinon-chai": "^1.3.1",
-    "karma-sourcemap-loader": "^0.3.7",
+    "chai": "3.5.0",
+    "chalk": "1.1.3",
+    "chromedriver": "2.27.2",
+    "connect-history-api-fallback": "1.3.0",
+    "copy-webpack-plugin": "4.0.1",
+    "cross-env": "3.1.4",
+    "cross-spawn": "5.0.1",
+    "css-loader": "0.26.1",
+    "eslint": "3.15.0",
+    "eslint-config-standard": "6.2.1",
+    "eslint-friendly-formatter": "2.0.7",
+    "eslint-loader": "1.6.1",
+    "eslint-plugin-html": "2.0.0",
+    "eslint-plugin-promise": "3.4.1",
+    "eslint-plugin-standard": "2.0.1",
+    "eventsource-polyfill": "0.9.6",
+    "express": "4.14.1",
+    "extract-text-webpack-plugin": "2.0.0",
+    "file-loader": "0.10.1",
+    "fontgen-loader": "0.2.1",
+    "friendly-errors-webpack-plugin": "1.1.3",
+    "function-bind": "1.1.0",
+    "html-webpack-plugin": "2.28.0",
+    "http-proxy-middleware": "0.17.4",
+    "inject-loader": "2.0.1",
+    "karma": "1.4.1",
+    "karma-coverage": "1.1.1",
+    "karma-mocha": "1.3.0",
+    "karma-phantomjs-launcher": "1.0.2",
+    "karma-sinon-chai": "1.3.1",
+    "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^2.0.2",
-    "lolex": "^1.5.2",
-    "longjohn": "^0.2.12",
-    "mocha": "^3.2.0",
-    "module": "^1.2.5",
-    "nightwatch": "^0.9.12",
-    "node-sass": "^4.5.0",
-    "opn": "^4.0.2",
-    "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "ora": "^1.1.0",
-    "phantomjs-prebuilt": "^2.1.14",
-    "rimraf": "^2.6.0",
-    "sass-loader": "^6.0.3",
-    "selenium-server": "^3.0.1",
-    "semver": "^5.3.0",
-    "sinon": "^2.1.0",
-    "sinon-chai": "^2.8.0",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^11.1.4",
-    "vue-style-loader": "^2.0.0",
-    "vue-svg-loader": "^0.1.2",
+    "karma-webpack": "2.0.2",
+    "lolex": "1.5.2",
+    "longjohn": "0.2.12",
+    "mocha": "3.2.0",
+    "module": "1.2.5",
+    "nightwatch": "0.9.12",
+    "node-sass": "4.5.0",
+    "opn": "4.0.2",
+    "optimize-css-assets-webpack-plugin": "1.3.0",
+    "ora": "1.1.0",
+    "phantomjs-prebuilt": "2.1.14",
+    "rimraf": "2.6.0",
+    "sass-loader": "6.0.3",
+    "selenium-server": "3.0.1",
+    "semver": "5.3.0",
+    "sinon": "2.1.0",
+    "sinon-chai": "2.8.0",
+    "url-loader": "0.5.8",
+    "vue-loader": "11.1.4",
+    "vue-style-loader": "2.0.0",
+    "vue-svg-loader": "0.1.2",
     "vue-template-compiler": "2.2.6",
-    "webpack": "^2.2.1",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^2.6.1"
+    "webpack": "2.2.1",
+    "webpack-bundle-analyzer": "2.2.1",
+    "webpack-dev-middleware": "1.10.0",
+    "webpack-hot-middleware": "2.16.1",
+    "webpack-merge": "2.6.1"
   }
 }
