--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "style-loader": "^0.16.1",
     "tiny-cookie": "^2.0.2",
     "vue": "~2.2.6",
+    "vue-agile": "^0.3.7",
     "vue-analytics": "tillkolter/vue-analytics",
     "vue-apollo": "^v2.1.0-beta.2",
     "vue-clickaway": "^2.1.0",
