--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
     "apollo-client": "^1.9.0-1",
     "babel-polyfill": "^6.23.0",
     "graphql-tag": "^2.0.0",
-    "heapdump": "^0.3.9",
     "isomorphic-fetch": "^2.2.1",
     "js-beautify": "1.6.14",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
     "node-fetch": "^1.6.3",
-    "nuxt": "v0.10.7",
+    "nuxt": "^1.4.0",
     "style-loader": "^0.16.1",
     "tiny-cookie": "^2.0.2",
-    "vue": "~2.2.6",
+    "vue": "^2.5.16",
     "vue-analytics": "tillkolter/vue-analytics",
     "vue-apollo": "^v2.1.0-beta.2",
     "vue-clickaway": "^2.1.0",
@@ -25,12 +24,14 @@
     "vue-cookie-law": "^1.3.0",
     "vue-ga": "^1.0.0",
     "vue-inline": "^1.0.1",
+    "vue-loader": "^14.2.1",
     "vue-markdown": "^2.1.3",
     "vue-meta": "^0.5.6",
     "vue-resource": "^1.2.1",
     "vue-router": "^2.4.0",
     "vue-social-sharing": "^2.2.0",
     "vue-supply": "^0.1.1",
+    "vue-template-compiler": "^2.5.16",
     "vue-ua": "^1.3.0",
     "vue2-dropzone": "^2.2.7",
     "vuex": "2.3.0"
@@ -105,10 +106,8 @@
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.8",
-    "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.0",
     "vue-svg-loader": "^0.1.2",
-    "vue-template-compiler": "2.2.6",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
