--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "vuex": "2.3.0"
   },
   "scripts": {
-    "dev": "HOST=192.168.0.7 nuxt",
+    "dev": "HOST=192.168.0.3 nuxt",
     "build": "nuxt build",
     "start": "HOST=0.0.0.0 PORT=3000 nuxt start",
     "generate": "nuxt generate",
@@ -109,6 +109,7 @@
     "vue-style-loader": "^2.0.0",
     "vue-svg-loader": "^0.1.2",
     "vue-template-compiler": "2.2.6",
+    "babel-preset-vue-app": "1.3.2",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
