--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "dependencies": {
     "apollo-client": "^1.9.0-1",
     "babel-polyfill": "^6.23.0",
+    "bootstrap": "^4.0.0",
     "graphql-tag": "^2.0.0",
     "isomorphic-fetch": "^2.2.1",
     "js-beautify": "1.6.14",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
     "node-fetch": "^1.6.3",
-    "nuxt": "v0.10.7",
+    "nuxt": "file:../nuxt.js",
     "style-loader": "^0.16.1",
     "tiny-cookie": "^2.0.2",
     "vue": "~2.2.6",
@@ -36,7 +37,7 @@
     "vuex": "2.3.0"
   },
   "scripts": {
-    "dev": "HOST=192.168.0.3 nuxt",
+    "dev": "nuxt",
     "build": "nuxt build",
     "start": "HOST=0.0.0.0 PORT=3000 nuxt start",
     "generate": "nuxt generate",
