--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-inline": "^1.0.1",
     "vue-markdown": "^2.1.3",
     "vue-meta": "^0.5.6",
+    "vue-no-ssr": "^0.2.2",
     "vue-resource": "^1.2.1",
     "vue-router": "^2.4.0",
     "vue-social-sharing": "^2.2.0",
