--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@nuxtjs/apollo": "4.0.0-rc2.3",
+    "@nuxtjs/apollo": "tillkolter/apollo-module",
     "@nuxtjs/axios": "5.3.6",
     "@nuxtjs/google-analytics": "2.0.2",
     "@nuxtjs/proxy": "1.3.1",
